--- a/index.html
+++ b/index.html
@@ -27,26 +27,8 @@
                     <a class="nav__link" href="#">Hire me</a>
                 </nav>
             </div>
-
-            <div class="title__welcome">
-                <div class="text">
-                    <div class="text__title">Welcome To My PortFolio</div>
-                    <div class="text__name">Hi , I am Steven UI/UX
-                        <div class="text__designer">Designer</div>
-                    </div>
-                    <div class="text__description">Lorem Ipsum dolar sit amet, consectetur adipicsing elit. Locus odio
-                        et, plateo erat est sed turpis hoc equit</div>
-
-                    <div class="buttons">
-                        <button class="button__hire">Hire me</button>
-                        <button class="button__project">My project</button>
-                    </div>
-                </div>
-                <img class="title__image" src="image.png" alt="">
-            </div>
         </div>
     </header>
-
 
     <section class="about-me">
         <header>
@@ -62,6 +44,7 @@
                     </div>
                     <img class="info__img" src="1 1.png" alt="">
                 </div>
+            </div>
         </header>
     </section>
 
@@ -87,6 +70,37 @@
         </header>
     </section>
 
+    <header class="title">
+        <div class="container">
+            <div class="title__inner">
+                <div class="title__logo">UniDesign</div>
+
+                <nav class="nav">
+                    <a class="nav__link" href="#">About me</a>
+                    <a class="nav__link" href="#">Projects</a>
+                    <a class="nav__link" href="#">Contacts</a>
+                    <a class="nav__link" href="#">Hire me</a>
+                </nav>
+            </div>
+
+            <div class="title__welcome">
+                <div class="text">
+                    <div class="text__title">Welcome To My PortFolio</div>
+                    <div class="text__name">Hi , I am Steven UI/UX
+                        <div class="text__designer">Designer</div>
+                    </div>
+                    <div class="text__description">Lorem Ipsum dolar sit amet, consectetur adipicsing elit. Locus odio
+                        et, plateo erat est sed turpis hoc equit</div>
+
+                    <div class="buttons">
+                        <button class="button__hire">Hire me</button>
+                        <button class="button__project">My project</button>
+                    </div>
+                </div>
+                <img class="title__image" src="image.png" alt="">
+            </div>
+        </div>
+    </header>
 
     <section class="contact_me">
         <header>
@@ -111,7 +125,6 @@
             </div>
         </header>
     </section>
-
 
     <section class="other">
         <header>
@@ -158,11 +171,9 @@
                     </div>
                 </div>
 
-
             </div>
         </header>
     </section>
-
 
 </body>
 
